--- a/game.html
+++ b/game.html
@@ -325,5 +325,16 @@
             }
         });
     </script>
+    <div style="display: none;">
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-V6FMSB7EX4"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-V6FMSB7EX4');
+        </script>
+    </div>
 </body>
 </html>
