--- a/index.html
+++ b/index.html
@@ -351,5 +351,16 @@
             </div>
         </div>
     </section>
+    <div style="display: none;">
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-V6FMSB7EX4"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-V6FMSB7EX4');
+        </script>
+    </div>
 </body>
 </html> 
